2010-07-27  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Only save state and render clip
	path when clip is present.

2010-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: We dont need the file/string anymore
	when creating a xaml loader.

2010-07-26  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Use lazy intermediate target
	allocation. Make sure clip isn't bigger than perspective
	transform render bounds.

	* runtime.h:
	* runtime.cpp: Add lazy target allocation to ContextNode. If
	a ContextNode is created from some extents instead of from a
	cairo context, the target surface and cairo context is not
	allocated until GetCr is called.

	* uielement.cpp: Use context list instead of cairo_push/pop group
	for local opacity and opacity mask. Set clip and transform
	in PreRender instead of PostRender.

	* uielement.h:
	* uielement.cpp: Add GetRenderCacheMode.

	* runtime.h:
	* runtime.cpp: Add RUNTIME_INIT_ENABLE_CACHE_MODE.

2010-07-26  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: The callbacks are now stored on the XamlContext and
	we always have a default XamlContext.  Cleans up the memory
	management of the callbacks a little.

2010-07-26  Jackson Harper  <jackson@ximian.com>

	* runtime.cpp: 
	* deployment.cpp|h: The XamlLoader no longer needs the string/file
	on instantiation.
	* xaml.cpp|h: The XamlLoader doesn't have to track the string/file
	its created with anymore. There was never any reason for this,
	since the input is passed in via a CreateFromString/File method.

2010-07-22  Jeffrey Stedfast  <fejj@novell.com>

	Initial work to fix Seadragon-513

	* multiscaleimage.cpp (ComputeActualSize): Implemented.
	(MeasureOverrideWithError): Implemented (might not be 100%
	correct).
	(MotionFinished): New method that gets called when all animations
	are finished. Emits the MotionFinishedEvent and updates the IsIdle
	status.
	(FadeFinished,PanFinished,ZoomFinished): Call MotionFinished() if